Fixed overlap issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1582,7 +1582,7 @@ hr {
 /******************* Sticky Filter *****************/
 .stickUp {
   & > div {
-    z-index: 9999 !important;
+    z-index: 1020 !important;
   }
 }
 /******************* Filter bar *****************/
